--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,11 @@ version = "0.1.2"
 num = "0.4.1"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
+rayon = "1.7.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
